sg/ec2-sg.tf
resource "aws_security_group" "ec2-sg" {
  name = "MY-EC2-SG"
  description = "Opening few ports on this security group"
  ingress {
                from_port = 22
                to_port = 22
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  ingress {
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  ingress {
                from_port = 8080
                to_port = 8080
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  ingress {
                from_port = 443
                to_port = 443
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  ingress {
                from_port = 3000
                to_port = 3000
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  ingress {
                from_port = 8081
                to_port = 8081
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
          }
  egress {
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
         }
}
